--- a/app/src/main/res/layout/dialog_search_keyword.xml
+++ b/app/src/main/res/layout/dialog_search_keyword.xml
@@ -12,29 +12,14 @@
         android:padding="10dp">
 
         <TextView
-            android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:text="일기 검색"
+            android:text="@string/search_diary"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/cancelButton"-->
-<!--            android:layout_width="30dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_alignParentRight="true"-->
-<!--            android:layout_centerVertical="true"-->
-<!--            android:background="@drawable/circle_view"-->
-<!--            android:paddingLeft="7dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingRight="5dp"-->
-<!--            android:paddingBottom="7dp"-->
-<!--            android:scaleType="centerInside"-->
-<!--            android:src="@drawable/x_icon" />-->
 
     </RelativeLayout>
 
@@ -44,7 +29,7 @@
         android:gravity="center"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="2dp"
-        android:text="검색할 내용을 입력해주세요🔍"
+        android:text="@string/enter_search_keyword"
         android:textSize="18sp"
         android:textColor="@color/font" />
 
@@ -52,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="(10자이내로 입력해주세요.)"
+        android:text="@string/within_10_characters"
         android:textSize="13sp"
         android:textColor="@color/pastel_700" />
 
@@ -60,10 +45,12 @@
         android:id="@+id/search_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:singleLine="true"
         android:maxLength="10"
+        android:textSize="15sp"
+        android:textColor="@color/font"
         android:backgroundTint="@color/pastel_700"/>
 
     <LinearLayout
@@ -80,7 +67,7 @@
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:background="@drawable/button"
-            android:text="취소"
+            android:text="@string/cancel"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="15sp"
@@ -92,9 +79,9 @@
             android:layout_width="70dp"
             android:layout_height="37dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:background="@drawable/button"
-            android:text="검색"
+            android:text="@string/search"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="15sp"
