--- a/app/src/main/res/drawable/photo_button.xml
+++ b/app/src/main/res/drawable/photo_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@drawable/photo_clicked_icon" />
+        android:drawable="@drawable/ic_image_color" />
 
-    <item android:drawable="@drawable/photo_icon" />
+    <item android:drawable="@drawable/ic_image" />
 </selector>
