2022-05-18 v1.6.1 준비 - CalendarFragment-> WriteFragment-> CalendarFragment시 데이터처리 - 버그 수정 - 일기 3줄 보기 = 선택사항

--- a/app/src/main/res/drawable/item_color.xml
+++ b/app/src/main/res/drawable/item_color.xml
@@ -5,6 +5,6 @@
         android:state_selected="true"
         android:color="@color/pastel_700" />
     <item
-        android:color="@color/pastel_gray" />
+        android:color="@color/unselected_navi_icon" />
 
 </selector>
