--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,10 +11,7 @@
         android:longClickable="true"
         android:background="@drawable/border_view"
         android:orientation="vertical"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
+        android:padding="12dp"
         android:visibility="visible">
 
         <RelativeLayout
@@ -145,6 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="3dp"
             android:paddingRight="10dp"
             android:paddingLeft="10dp">
 
@@ -190,9 +188,9 @@
                 android:id="@+id/dateTextView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:text="2021년 04월 10일"
                 android:textColor="@color/font"
                 android:textSize="16sp"
@@ -203,8 +201,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:layout_toRightOf="@id/dateTextView2"
+                android:layout_marginEnd="10dp"
+                android:layout_toEndOf="@id/dateTextView2"
                 android:text="화"
                 android:textColor="@color/pastel_700"
                 android:textSize="16sp"
@@ -214,7 +212,7 @@
                 android:id="@+id/starImageView2"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:layout_toRightOf="@id/weekTextView2"
+                android:layout_toEndOf="@id/weekTextView2"
                 android:layout_centerVertical="true"
                 app:srcCompat="@drawable/star" />
 
@@ -231,12 +229,6 @@
                 android:orientation="vertical"
                 android:gravity="center"
                 android:visibility="visible">
-
-<!--                <ImageView-->
-<!--                    android:layout_width="45dp"-->
-<!--                    android:layout_height="56dp"-->
-<!--                    android:layout_marginBottom="15dp"-->
-<!--                    android:src="@drawable/mood_crying_color" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -259,15 +251,13 @@
                 android:id="@+id/photo_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|bottom"
-                android:layout_marginRight="10dp"
+                android:layout_gravity="end|bottom"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:visibility="gone"
                 android:orientation="horizontal"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingVertical="3dp"
+                android:paddingHorizontal="10dp"
                 android:background="@drawable/gray_ellipse">
 
                 <TextView
@@ -294,15 +284,13 @@
                     android:textColor="@color/white" />
 
             </LinearLayout>
+
         </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -332,12 +320,9 @@
                     android:id="@+id/weatherImageView2"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginHorizontal="20dp"
                     android:layout_toEndOf="@id/moodImageView2" />
 
-                <!-- android:layout_toLeftOf="@id/timeTextView2"
-                    android:layout_toRightOf="@id/weatherImageView2" -->
                 <TextView
                     android:id="@+id/locationTextView2"
                     android:layout_width="wrap_content"
@@ -354,14 +339,17 @@
                     android:id="@+id/timeTextView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:text="시간"
                     android:textColor="@color/gray"
                     android:textSize="12sp" />
 
             </RelativeLayout>
+
         </LinearLayout>
+
     </LinearLayout>
+
 </FrameLayout>
