2022-05-28 v1.6.1 배포 - CalendarFragment-> WriteFragment-> CalendarFragment시 데이터처리 - 버그 수정 - 일기 3줄 보기, 모두보기 선택 가능 - Naver reverse geocoding 적용 - 코드 최적화

--- a/app/src/main/res/layout/delete_dialog_custom.xml
+++ b/app/src/main/res/layout/delete_dialog_custom.xml
@@ -45,6 +45,7 @@
         android:gravity="center"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="25dp"
+        android:lineSpacingExtra="5dp"
         android:text="사진을 삭제하시겠습니까?"
         android:textSize="18sp"
         android:textColor="@color/font" />
