--- a/app/src/main/res/layout/dialog_msg.xml
+++ b/app/src/main/res/layout/dialog_msg.xml
@@ -45,6 +45,7 @@
         android:gravity="center"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="25dp"
+        android:lineSpacingExtra="5dp"
         android:text="contents"
         android:textSize="18sp"
         android:textColor="@color/font" />
