--- a/app/src/main/res/layout/stop_write_dialog_custom.xml
+++ b/app/src/main/res/layout/stop_write_dialog_custom.xml
@@ -25,13 +25,10 @@
             android:id="@+id/cancelButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_view"
-            android:paddingLeft="7dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="7dp"
+            android:padding="7dp"
             android:scaleType="centerInside"
             android:src="@drawable/x_icon" />
 
@@ -42,12 +39,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="25dp"
-        android:text="일기 작성을 그만두시겠습니까?\n 작성한 일기는 저장되지 않습니다."
+        android:layout_marginBottom="10dp"
+        android:text="일기 작성을 그만두시겠습니까?"
         android:textSize="18sp"
         android:lineSpacingExtra="5dp"
         android:textColor="@color/font" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"
+        android:text="(작성한 일기는 저장되지 않습니다.)"
+        android:textSize="15sp"
+        android:lineSpacingExtra="5dp"
+        android:textColor="@color/pastel_700" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,9 +69,9 @@
             android:layout_width="80dp"
             android:layout_height="37dp"
             android:layout_gravity="center"
-            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/button"
-            android:text="뒤로가기"
+            android:text="작성 취소"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
