--- a/app/src/main/res/layout/time_picker_dialog.xml
+++ b/app/src/main/res/layout/time_picker_dialog.xml
@@ -25,13 +25,10 @@
             android:id="@+id/cancelButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_view"
-            android:paddingLeft="7dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="7dp"
+            android:padding="7dp"
             android:scaleType="centerInside"
             android:src="@drawable/x_icon" />
 
