--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -30,8 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/container"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:background="@color/background"
             android:orientation="vertical">
@@ -56,9 +55,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="7dp"
-                    android:text="2021년 05월 10일"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="7dp"
+                    android:text="xxxx년 xx월 xx일"
                     android:textColor="@color/font"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -68,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="월"
+                    android:text="x"
                     android:textColor="@color/pastel_700"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -78,7 +77,7 @@
                     android:layout_width="17dp"
                     android:layout_height="17dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:src="@drawable/star" />
 
             </LinearLayout>
@@ -89,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"
-                android:text="오전 00:30"
+                android:text="오전 xx:xx"
                 android:textColor="@color/gray"
                 android:textSize="13sp" />
 
@@ -187,13 +186,14 @@
             <Button
                 android:id="@+id/txt_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/ripple_radius_5_pastel_300"
-                android:textAllCaps="false"
+                android:paddingHorizontal="10dp"
                 android:text="txt 파일로 내보내기"
+                android:textAllCaps="false"
                 android:textColor="@color/pastel_700"
-                android:textSize="10dp"
+                android:textSize="11sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -203,7 +203,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="7dp"
-                android:text="고양시 일산서구"
+                android:text="xx시 xx동"
                 android:textColor="@color/pastel_700"
                 android:textSize="15sp" />
 
