--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -106,28 +106,28 @@
 
     </style>
     <style name="Widget.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
-        <item name="fontFamily">@font/font</item>
+        <item name="fontFamily">@font/main_font</item>
     </style>
     <style name="customCalenderHeaderFontStyle">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
     <style name="customTextViewFontStyle" parent="@android:style/Widget.DeviceDefault.TextView">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
     <style name="customButtonFontStyle" parent="@android:style/Widget.DeviceDefault.Button.Borderless">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
     <style name="customEditTextFontStyle" parent="@android:style/Widget.DeviceDefault.EditText">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
     <style name="customRadioButtonFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
     <style name="customCheckboxFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
     <style name="customSpinnerFontStyle" parent="Widget.AppCompat.Spinner">
-        <item name="android:fontFamily">@font/font</item>
+        <item name="android:fontFamily">@font/main_font</item>
     </style>
 
 
