--- a/app/src/main/res/anim/crown_icon_animation.xml
+++ b/app/src/main/res/anim/crown_icon_animation.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-
     <rotate
+        android:duration="500"
+        android:fromDegrees="-10"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:fromDegrees="-10"
-        android:toDegrees="10"
-        android:duration="500"
+        android:repeatCount="infinite"
         android:repeatMode="reverse"
-        android:repeatCount="infinite"/>
-
+        android:toDegrees="10" />
     <translate
-        android:fromXDelta="-10"
-        android:toXDelta="10"
         android:duration="500"
+        android:fromXDelta="-10"
+        android:repeatCount="infinite"
         android:repeatMode="reverse"
-        android:repeatCount="infinite"/>
-
+        android:toXDelta="10" />
 </set>
