--- a/app/src/main/res/anim/list_animation.xml
+++ b/app/src/main/res/anim/list_animation.xml
@@ -2,9 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_decelerate_interpolator">
     <translate
-        android:fromXDelta="100%p"
-        android:toXDelta="0%p"
         android:duration="500"
+        android:fillAfter="true"
+        android:fromXDelta="100%p"
         android:repeatCount="0"
-        android:fillAfter="true" />
+        android:toXDelta="0%p" />
 </set>
