--- a/app/src/main/res/anim/translate_left_animation.xml
+++ b/app/src/main/res/anim/translate_left_animation.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_decelerate_interpolator">
     <translate
+        android:duration="500"
         android:fromXDelta="0%p"
-        android:toXDelta="-100%p"
-        android:duration="500" />
+        android:toXDelta="-100%p" />
 </set>
